fix vertical alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,6 +107,7 @@ button {
     font-size: 16px;
     display: inline-flex;
     flex-direction: row;
+    align-items: center;
     align-content: center;
     justify-content: center;
     border: none;
